Adición de carné y nombre completo

--- a/unicaesparcial2014ar603/Views/Home/Index.cshtml
+++ b/unicaesparcial2014ar603/Views/Home/Index.cshtml
@@ -1,9 +1,10 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Parcial ACC";
 }
 
 <div class="text-center">
     <h1 class="display-4">¡Bienvenido ingeniero!</h1> </br>
-    <h4>Este proyecto es para el parcial de ACC, Periodo II</h4>
+    <h4>Segundo exámen Parcial</h4>
+    <h4>Carné: 2014-AR-603 Nombre: David Asaf Amaya Rivas</h4>
     
 </div>
