Carousel de fotos con enlace a storage fue agregado con exito

--- a/unicaesparcial2014ar603/Views/Home/Index.cshtml
+++ b/unicaesparcial2014ar603/Views/Home/Index.cshtml
@@ -1,10 +1,15 @@
 ﻿@{
     ViewData["Title"] = "Parcial ACC";
 }
-
-<div class="text-center">
-    <h1 class="display-4">¡Bienvenido ingeniero!</h1> </br>
-    <h4>Segundo exámen Parcial</h4>
-    <h4>Carné: 2014-AR-603 Nombre: David Asaf Amaya Rivas</h4>
     
-</div>
+    <div class="text-center">
+        <h1 class="display-4" style="color:white">¡Bienvenido ingeniero!</h1> </br></br>
+        <div class="container center-h center-v" style="width: 175px; height: 175px;">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/8/8e/UNICAES_Logo.png" alt="logo-un" class="img-thumbnail">
+        </div>
+        <!--Este logo fue puesto solo de adorno a la página-->
+        </br></br>
+        <h4 style="color:white">Segundo exámen Parcial</h4>
+        <h4 style="color:lightgray">Carné: 2014-AR-603 Nombre: David Asaf Amaya Rivas</h4>
+
+    </div>
